# MCP-EKS-Site

./: .gitignore  Dockerfile  README.md  main.py  neo4jBuild.sh  pyproject.toml  requirements.txt  samples.txt
app/: __init__.py  geminiServer.py  main.py  models.py  settings.py
app/mcp/: __init__.py  fastServer.py  geminiClient.py  mcpClient.py  mcpServer.py
app/mcp/mcp-neo4j-memory/: Dockerfile  build.sh
helm/portfoliosite/: Chart.yaml  values.yaml
helm/portfoliosite/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
nextjs/: package-lock.json  package.json
nextjs/app/: globals.css  layout.tsx  page.tsx
nextjs/app/api/chat/: route.ts
nextjs/app/api/contact/: route.ts
nextjs/components/: about.tsx  certifications.tsx  chatbot.tsx  contact.tsx  education.tsx  experience.tsx  hero.tsx  intro-animation.tsx  navigation.tsx  projects.tsx  technologies.tsx
