[project]
name = "portfoliosite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi>=0.116.0",
    "google-genai>=1.24.0",
    "mcp>=1.10.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "tenacity>=8.5.0",
    "uvicorn>=0.35.0",
]
